Fix image path and update location text formatting

--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
 
           <div class="right-rail">
             <div class="hero-photo reveal" aria-label="Portrait">
-              <img src="/assets/sejal.jpg" alt="Portrait of Sejal Khadkikar" loading="lazy" />
+              <img src="assets/sejal.jpg" alt="Portrait of Sejal Khadkikar" loading="lazy" />
             </div>
             <aside class="signal reveal" aria-label="Credibility signals">
               <div class="signal-row">
@@ -922,7 +922,7 @@
             </div>
             <div class="signal-row">
               <div class="label">Location</div>
-              <div class="value">New York based · Open to relocate · Open to remote</div>
+              <div class="value">New York · Open to Relocate · Open to Remote</div>
             </div>
           </aside>
         </div>
