Update hero photo styles in index.html

--- a/index.html
+++ b/index.html
@@ -354,16 +354,16 @@
   }
 
   .hero-photo {
-    max-width: 240px;
-    margin: 0 0 16px auto;
+    max-width: 300px;
+    margin: 0 0 18px auto;
   }
 
   .hero-photo img {
     width: 100%;
     height: auto;
-    border-radius: 14px;
+    border-radius: 16px;
     object-fit: cover;
-    filter: grayscale(100%);
+    filter: grayscale(10%) contrast(1.02);
     box-shadow: var(--shadow);
     display: block;
   }
