--- a/index.html
+++ b/index.html
@@ -295,8 +295,7 @@
     letter-spacing: -0.04em;
     font-weight: 600;
     margin: 14px 0;
-  }
-
+  }    
   h2 {
     font-family: var(--serif);
     font-size: var(--h2);
@@ -333,6 +332,28 @@
     gap: clamp(22px, 4vw, 48px);
     align-items: start;
   }
+ 
+  .hero-title {
+    margin: 0;
+  }
+  
+  .hero-text {
+    padding-top: 16px; /* adds luxury above H1 */
+  }
+  .hero-line {
+    display: block;
+  }
+
+  .hero-line.primary {
+    opacity: 1;
+  }
+
+  .hero-line.secondary {
+    opacity: 0.92; /* ~5–8% softer than primary */
+  }
+
+
+    
 
   @media (max-width: 860px) {
     .hero-grid { grid-template-columns: 1fr; }
@@ -358,7 +379,7 @@
     margin: 0 0 18px auto;
   }
 
-  .hero-photo img {
+/*  .hero-photo img {
     width: 100%;
     height: auto;
     border-radius: 16px;
@@ -366,6 +387,31 @@
     filter: grayscale(10%) contrast(1.02);
     box-shadow: var(--shadow);
     display: block;
+  }
+    */
+  .hero-photo img {
+    width: 100%;
+    height: auto;
+    border-radius: 18px; /* +2–4px from before */
+    object-fit: cover;
+    filter: grayscale(12%) saturate(1.04);
+    box-shadow: 0 10px 24px rgba(0, 0, 0, 0.18); /* slightly tighter blur */
+    display: block;
+  }
+
+  .hero-heading {
+    position: relative;
+    padding-left: 16px;
+  }
+
+  .hero-heading::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0.2em;
+    height: calc(100% - 0.2em);
+    width: 1px;
+    background: rgba(0, 0, 0, 0.08);
   }
 
   .roleline {
@@ -668,9 +714,13 @@
       <div class="wrap">
         <div class="hero-grid">
 
-          <div class="reveal">
-            <div class="kicker">Product-native operator</div>
-            <h1>Product operations & strategy, bridging engineering, product, and execution.</h1>
+          <div class="hero-heading">
+            <div class="kicker">PRODUCT-NATIVE OPERATOR</div>
+            <h1 class="hero-title">
+              <span class="hero-line primary">Product operations & strategy,</span>
+              <span class="hero-line secondary">bridging engineering,</span>
+              <span class="hero-line secondary">product, and execution.</span>
+            </h1>
             <p class="lead">
               I work where roadmap meets reality: ambiguous problems, cross-functional constraints, and systems that must ship cleanly.
               My edge is technical fluency paired with operational rigor, turning uncertainty into structured plans, dependable delivery, and measurable outcomes.
